<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/coordinatorlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clipToPadding="false"
                android:padding="16dp">

            <!-- Name -->

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gsmeac_name"
                            android:textColor="@color/textBlack"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                    <ImageView
                            android:id="@+id/nameInfoButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_information_grey600_24dp"/>

                </LinearLayout>

                <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textBlack"
                        android:inputType="textCapSentences|textMultiLine"/>

            </LinearLayout>

            <!-- Ground -->

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gsmeac_ground"
                            android:textColor="@color/textBlack"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                    <ImageView
                            android:id="@+id/groundInfoButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_information_grey600_24dp"/>

                </LinearLayout>

                <EditText
                        android:id="@+id/groundEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textBlack"
                        android:inputType="textCapSentences|textMultiLine"/>

            </LinearLayout>

            <!-- Situation -->

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gsmeac_situation"
                            android:textColor="@color/textBlack"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                    <ImageView
                            android:id="@+id/situationInfoButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_information_grey600_24dp"/>

                </LinearLayout>

                <EditText
                        android:id="@+id/situationEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textBlack"
                        android:inputType="textCapSentences|textMultiLine"/>

            </LinearLayout>

            <!-- Mission -->

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gsmeac_mission"
                            android:textColor="@color/textBlack"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                    <ImageView
                            android:id="@+id/missionInfoButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_information_grey600_24dp"/>

                </LinearLayout>

                <EditText
                        android:id="@+id/missionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textBlack"
                        android:inputType="textCapSentences|textMultiLine"/>

            </LinearLayout>

            <!-- Execution -->

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gsmeac_execution"
                            android:textColor="@color/textBlack"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                    <ImageView
                            android:id="@+id/executionInfoButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_information_grey600_24dp"/>

                </LinearLayout>

                <EditText
                        android:id="@+id/executionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textBlack"
                        android:inputType="textCapSentences|textMultiLine"/>

            </LinearLayout>

            <!-- Administration and Logistics -->

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gsmeac_administration_and_logistics"
                            android:textColor="@color/textBlack"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                    <ImageView
                            android:id="@+id/administrationAndLogisticsInfoButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_information_grey600_24dp"/>

                </LinearLayout>

                <EditText
                        android:id="@+id/administrationAndLogisticsEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textBlack"
                        android:inputType="textCapSentences|textMultiLine"/>

            </LinearLayout>

            <!-- Command and Signals -->

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gsmeac_command_and_signals"
                            android:textColor="@color/textBlack"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                    <ImageView
                            android:id="@+id/commandAndSignalsInfoButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_information_grey600_24dp"/>

                </LinearLayout>

                <EditText
                        android:id="@+id/commandAndSignalsEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textBlack"
                        android:inputType="textCapSentences|textMultiLine"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>